1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): c_int is an Integer, not an Int.

	* Makefile.in: Split stubs and support code into two shared libraries.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.m: Include defobj.h instead of defobj/FCall.h.
	(Java_SwarmEnvironment_initSwarm): 
	Use renamed init_javacall_tables; defobj_init_java_call_tables.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm_la_OBJECTS): Add SwarmEnvironment.lo.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.m (Java_SwarmEnvironment_initSwarm): Add 
	calls to java_directory_init and init_javacall_tables.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JUPDATE): New macro.
	(JADD): Remove.

	* directory.[hm] (java_directory_init): Add jniEnv argument.
	(java_directory_update, java_directory_update_java): New functions.

	* setup.c: Remove initialize constructor.

1999-03-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in: Include $(top_builddir)/etc/Makefile.common.
	Append build-directory -I directives to CPPFLAGS.
	Append @CFLAGS_NOWARN_UNKNOWN_PRAGMAS@ to CFLAGS and OBJCFLAGS.
	(libjavaswarm_la_LDFLAGS): Use SUPPORTLDFLAGS.
	(libjavaswarm.la): Use SWARMLIBS.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CPPFLAGS): Add -I for libobjc.
	(abs_top_builddir): New variable.
	(IMPMODULES): New variable.
	(libjavaswarm_la_LDFLAGS): Use it to get .libs directories for -L.
	Pass -L for libobjc/.libs.  Pass -rpath $(libdir).
	(libjavaswarm.la): Expand list of -l for IMPMODULES.

1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JFINDOBJCMETHOD): New macro.

1999-03-11  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.m: New file.

	* SwarmEnvironment.h: New file. 

1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.c 