@@ -1,5 +1,11 @@
 1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* directory.m (create_class_refs): Initialize globalZone via
+	static field lookup in SwarmEnvironment class.
+
+	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
+	Renamed from Java_SwarmEnvironment_initSwarm.
+
 	* directory.m (create_class_refs): c_int is an Integer, not an Int.
 
 	* Makefile.in: Split stubs and support code into two shared libraries.
